# ai_kb_by

./: .env.local.example  .gitignore  CITATION_FIX_REPORT.json  CITATION_VALIDATION.jsonl  CLASSIFICATION_RULES.md  CORE_TECH_DIGEST.md  DEDUP_CANDIDATES.json  DEDUP_LOG.jsonl  ENHANCEMENT_LOG.jsonl  ENHANCEMENT_LOG_V2.jsonl  KNOWLEDGE_BASE_STRUCTURE.md  LATEX_FIX_LOG.jsonl  LEARNING_CONFIG.md  LEARNING_PATH.md  LLM_INTEGRATION_ROADMAP.md  QUALITY_IMPROVEMENT_REPORT.md  QUALITY_METRICS.json  README.md  auto_learn_v2.sh  dedup_plan.json  index.md  knowledge_graph.md  knowledge_graph_complete.md  learning_queue.json  papers_queue.jsonl  processed_log.jsonl  reorganization_report_20260324.md  stock-model-design.md  梳理报告_20260324.md
.obsidian/: graph.json  workspace.json
_archive/: knowledge_graph.md
_config/: CLASSIFICATION_RULES.md  KNOWLEDGE_BASE_STRUCTURE.md  LLM_INTEGRATION_ROADMAP.md
_data/: papers_queue.jsonl  processed_log.jsonl
_meta/: INDEX.md  quality_report_20260403.md  quality_report_R1_R20_20260403.md
ads/: 01_ads_system.md  02_ads_advanced.md  20260313_generative_ctr_paradigm.md  20260316_genci-cohort-ctr.md  20260316_ocpc-ocpa-optimization.md  20260317_deepfm-ctr.md  20260317_stochastic-ope-ad-auctions.md  20260318_DiffusionAutoBidding.md  20260318_EGAV2.md  20260318_LLMAuction.md  20260318_MultimodalCTR.md  20260318_advanced_bidding.md  20260318_bidding_basics.md  20260318_bidding_strategy_practical.md  20260318_ocpc_ocpa_deep.md  20260318_rtb_auction_mechanism.md  20260319_halo-hindsight-autobidding.md  20260319_no-regret-autobidding-first-price-auction.md  20260319_no-regret-autobidding-first-price.md  20260320_adaptive-bidding-budget-nonstationary.md  20260320_joint-value-estimation-bidding-repeated-fpa.md  20260320_practical-guide-budget-pacing.md  20260321_budget-pacing-strategies-for-large-scale-ad-campaigns.md  20260321_multi-objective-optimization-for-online-advertising-balancing-revenue-and-user-experience.md  20260322_autobid_rl_ad_bidding.md  20260322_din_deep_interest_network.md  20260322_llm_ad_creative_generation.md  INDEX.md  (+12 more)
projects/stateful-graphrag-bot/: pyproject.toml
(+1898 files in other folders)
