[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stateful-graphrag-bot"
version = "0.1.0"
description = "GraphRAG knowledge-base QA system with stateful sessions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # --- Core LLM / Embedding ---
    "openai>=1.30.0",
    "sentence-transformers>=2.7.0",      # bge-large-zh-v1.5 & bge-reranker-v2-m3
    "FlagEmbedding>=1.2.0",              # BAAI reranker

    # --- Vector DB ---
    "lancedb>=0.6.0",
    "pyarrow>=15.0.0",

    # --- Graph DB ---
    "neo4j>=5.19.0",

    # --- Community detection ---
    "igraph>=0.11.0",
    "leidenalg>=0.10.0",

    # --- Document parsing ---
    "pymupdf>=1.24.0",                   # PDF
    "python-docx>=1.1.0",               # DOCX
    "markdown-it-py>=3.0.0",            # Markdown

    # --- Web / State ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- Utilities ---
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",               # for TestClient
]
eval = [
    "ragas>=0.1.10",
    "datasets>=2.19.0",
]

[project.scripts]
graphrag-ingest = "scripts.ingest_docs:main"
graphrag-build-graph = "scripts.build_graph:main"
graphrag-evaluate = "scripts.evaluate:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
